grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      serviceAccountName: sample-acc
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: shared-volume
              mountPath: /etc/grafana/provisioning/dashboards
            - name: grafana-config
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
        - name: grafana-dashboard-sidecar
          image: kiwigrid/k8s-sidecar:latest
          volumeMounts:
            - name: shared-volume
              mountPath: /etc/grafana/provisioning/dashboards
      volumes:
        - name: grafana-volume
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: grafana-datasources
          configMap:
            name: grafana-datasources-cm
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: shared-volume
          emptyDir: {}
