grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app: grafana
spec:
  ports:
    - port: 3000
      targetPort: 80
  selector:
    app: grafana
  type: ClusterIP
