grafana/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-service
  namespace: grafana
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`grafana.mw`)
    priority: 10
    services:
    - name: arg
      port: 80
